# envch

./: .gitignore  Cargo.toml  LICENSE  README.md
snap/: snapcraft.yaml
src/: input.rs  main.rs
src/utils/: environment_variable.rs  list_env.rs  mod.rs
